# blinc_charts

./: BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: cartesian_interaction.rs  cartesian_render.rs  family_render.rs  line_render.rs  micro_hotpaths.rs  plot_compile.rs  support.rs
benchmarks/: ci_benchmarks.json
docs/plans/: 2026-03-07-line-rendering-performance.md  2026-03-08-benchmark-hardening.md
scripts/: bench_ci.py
src/: annotation.rs  area.rs  axis.rs  bar.rs  brush.rs  candlestick.rs  common.rs  contour.rs  density_map.rs  format.rs  gauge.rs  geo.rs  heatmap.rs  hierarchy.rs  histogram.rs  input.rs  interpolate.rs  lib.rs  line.rs  link.rs  lod.rs  lod_cache.rs  multi_line.rs  network.rs  palette.rs  polar.rs  polygon.rs  scale.rs  scatter.rs  segments.rs  spatial_index.rs  stacked_area.rs  statistics.rs  time_format.rs  time_series.rs  transition.rs  triangulation.rs  view.rs  xy_stack.rs
tests/: d3_gap_modules.rs  gallery_completion_smoke.rs  test_bench_ci.py
