[package]
name = "blinc_charts"
description = "High-performance interactive charts for Blinc (GPU-accelerated, canvas-first)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ui", "gui", "charts", "canvas", "blinc"]
categories = ["gui", "graphics", "visualization"]

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
blinc_core = { path = "../blinc_core", version = "0.1.12" }
blinc_layout = { path = "../blinc_layout", version = "0.1.12" }

anyhow.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
