[package]
name = "blinc_charts"
description = "High-performance interactive charts for Blinc (GPU-accelerated, canvas-first)"
version = "0.1.14"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mrchypark/blinc_charts"
rust-version = "1.75"
readme = "README.md"
keywords = ["ui", "gui", "charts", "canvas", "blinc"]
categories = ["gui", "graphics", "visualization"]

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
blinc_core = { git = "https://github.com/mrchypark/Blinc.git", branch = "main", package = "blinc_core" }
blinc_layout = { git = "https://github.com/mrchypark/Blinc.git", branch = "main", package = "blinc_layout" }

anyhow = "1.0"
rustc-hash = "2.0"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cartesian_render"
harness = false

[[bench]]
name = "cartesian_interaction"
harness = false

[[bench]]
name = "family_render"
harness = false

[[bench]]
name = "plot_compile"
harness = false

[[bench]]
name = "micro_hotpaths"
harness = false
